old slurm/slurm-1902.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
src/direct_cuda_pattern.cc:18:7: error: no template named 'matrix'; did you mean 'f::matrix'?
    f:matrix<double> ug;
      ^~~~~~
      f::matrix
include/f/matrix/impl/matrix_impl.hpp:76:12: note: 'f::matrix' declared here
    struct matrix :
           ^
1 error generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
direct_cuda_pattern: include/f/pattern/pattern.hpp:111: void f::pattern<double>::simulate_intensity(const complex_matrix_type &) [T = double]: Assertion `ug_.size() == ug_size' failed.
/var/spool/slurmd/job01902/slurm_script: line 16: 20497 Aborted                 (core dumped) ./direct_cuda_pattern
